# RPG-Project

./: CMakeLists.txt  README.md  main.cpp  save.cpp  save.h
.cache/clangd/index/: character.cpp.9595E727E2C0C945.idx  character.h.BDAEACC23AFDF532.idx  enemy.cpp.B26B7C14754C5A4D.idx  enemy.h.8676BFE4295BC481.idx  main.cpp.434CDC15A86BCFDB.idx  player.cpp.663CC813A47E981C.idx  player.h.9B4D779442C696B4.idx
character/: character.cpp  character.h
enemy/: enemy.cpp  enemy.h
item/: item.cpp  item.h
player/: jobs.cpp  jobs.h  player.cpp  player.h  skills.cpp  skills.h
